--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "ethjs": "^0.3.1",
-    "truffle": "^4.0.4",
-    "truffle-hdwallet-provider": "0.0.3",
+    "truffle": "^5.0.0-beta.0",
+    "truffle-contract": "^3.0.6",
+    "truffle-hdwallet-provider": "^1.0.0-web3one.0",
+    "web3": "^1.0.0-beta.36",
     "zeppelin-solidity": "^1.5.0"
   },
   "engines": {
